--- a/hyperapp/common/mark.resources.yaml
+++ b/hyperapp/common/mark.resources.yaml
@@ -2,7 +2,7 @@ import:
 - legacy_service:mosaic
 - legacy_type.attr_constructors:parameter
 - legacy_type.attr_constructors:service
-- legacy_type.attribute:attribute
+- legacy_type.builtin:attribute
 - legacy_type.call:call
 - legacy_type.global_command_ctr:global_command_ctr
 - legacy_type.object_command_ctr:object_command_ctr
@@ -26,7 +26,7 @@ definitions:
       services.mosaic: legacy_service:mosaic
 
   mark:
-    _type: legacy_type.attribute:attribute
+    _type: legacy_type.builtin:attribute
     object: mark.module
     attr_name: mark
 
