--- a/hyperapp/client/command_list.fixtures.fixtures.resources.yaml
+++ b/hyperapp/client/command_list.fixtures.fixtures.resources.yaml
@@ -4,13 +4,13 @@
 
 import:
 - common.mark:mark.service
-- legacy_type.attribute:attribute
+- legacy_type.builtin:attribute
 - legacy_type.call:call
 - legacy_type.builtin:python_module
 associations: []
 definitions:
   adapter:
-    _type: legacy_type.attribute:attribute
+    _type: legacy_type.builtin:attribute
     object: command_list.fixtures.fixtures.module
     attr_name: adapter
   command_list.fixtures.fixtures.module:
