--- a/hyperapp/client/local_server.fixtures.resources.yaml
+++ b/hyperapp/client/local_server.fixtures.resources.yaml
@@ -4,7 +4,7 @@
 
 import:
 - common.mark:mark.service
-- legacy_type.attribute:attribute
+- legacy_type.builtin:attribute
 - legacy_type.call:call
 - legacy_type.builtin:python_module
 associations: []
@@ -16,7 +16,7 @@ definitions:
     import_list:
       services.mark: common.mark:mark.service
   local_server_ref:
-    _type: legacy_type.attribute:attribute
+    _type: legacy_type.builtin:attribute
     object: local_server.fixtures.module
     attr_name: local_server_ref
   local_server_ref.service:
