--- a/hyperapp/client/local_server.resources.yaml
+++ b/hyperapp/client/local_server.resources.yaml
@@ -5,7 +5,7 @@
 import:
 - common.local_server:local_server_ref.service
 - common.mark:mark.service
-- legacy_type.attribute:attribute
+- legacy_type.builtin:attribute
 - legacy_type.global_command:global_command_association
 - legacy_type.impl:global_command_impl
 - legacy_type.local_server:open_local_server_d
@@ -22,7 +22,7 @@ definitions:
       services.local_server_ref: common.local_server:local_server_ref.service
       services.mark: common.mark:mark.service
   open_local_server:
-    _type: legacy_type.attribute:attribute
+    _type: legacy_type.builtin:attribute
     object: local_server.module
     attr_name: open_local_server
   open_local_server.command:
