--- a/hyperapp/command_line/update_resources.resources.yaml
+++ b/hyperapp/command_line/update_resources.resources.yaml
@@ -1,7 +1,7 @@
 import:
 - legacy_service:mosaic
 - legacy_service:resource_registry
-- legacy_type.attribute:attribute
+- legacy_type.builtin:attribute
 - legacy_type.builtin:python_module
 - guesser.update_resources:update_resources
 
@@ -17,6 +17,6 @@ definitions:
       services.resource_registry: legacy_service:resource_registry
 
   update_resources:
-    _type: legacy_type.attribute:attribute
+    _type: legacy_type.builtin:attribute
     object: update_resources.module
     attr_name: update_resources
