--- a/hyperapp/common/bundler.resources.yaml
+++ b/hyperapp/common/bundler.resources.yaml
@@ -8,20 +8,20 @@ import:
 - legacy_service:association_reg
 - legacy_service:mosaic
 - legacy_service:types
-- legacy_type.attribute:attribute
+- legacy_type.builtin:attribute
 - legacy_type.builtin:python_module
 - legacy_type.call:call
 associations: []
 definitions:
   aux_bundler_hooks:
-    _type: legacy_type.attribute:attribute
+    _type: legacy_type.builtin:attribute
     object: bundler.module
     attr_name: aux_bundler_hooks
   aux_bundler_hooks.service:
     _type: legacy_type.call:call
     function: aux_bundler_hooks
   bundler:
-    _type: legacy_type.attribute:attribute
+    _type: legacy_type.builtin:attribute
     object: bundler.module
     attr_name: bundler
   bundler.module:
