--- a/hyperapp/guesser/global_command_ctr.resources.yaml
+++ b/hyperapp/guesser/global_command_ctr.resources.yaml
@@ -6,7 +6,7 @@ import:
 - guesser.utils:utils.module
 - legacy_service:mosaic
 - legacy_service:types
-- legacy_type.attribute:attribute
+- legacy_type.builtin:attribute
 - legacy_type.builtin:python_module
 - legacy_type.code_registry:association
 - legacy_type.global_command:global_command_association
@@ -20,7 +20,7 @@ associations:
   function: construct
 definitions:
   construct:
-    _type: legacy_type.attribute:attribute
+    _type: legacy_type.builtin:attribute
     object: global_command_ctr.module
     attr_name: construct
   global_command_ctr.module:
@@ -29,7 +29,7 @@ definitions:
     file_name: global_command_ctr.dyn.py
     import_list:
       code.utils: guesser.utils:utils.module
-      htypes.attribute.attribute: legacy_type.attribute:attribute
+      htypes.builtin.attribute: legacy_type.builtin:attribute
       htypes.global_command.global_command_association: legacy_type.global_command:global_command_association
       htypes.global_command_ctr.global_command_ctr: legacy_type.global_command_ctr:global_command_ctr
       htypes.impl.global_command_impl: legacy_type.impl:global_command_impl
