--- a/hyperapp/guesser/import_discoverer.resources.yaml
+++ b/hyperapp/guesser/import_discoverer.resources.yaml
@@ -1,6 +1,6 @@
 import:
   - legacy_service:python_object_creg
-  - legacy_type.attribute:attribute
+  - legacy_type.builtin:attribute
   - legacy_type.import_discoverer:import_discoverer
   - legacy_type.import_discoverer:using_incomplete_object
   - legacy_type.builtin:python_object_association
@@ -23,6 +23,6 @@ definitions:
       services.python_object_creg: legacy_service:python_object_creg
 
   ImportDiscoverer:
-    _type: legacy_type.attribute:attribute
+    _type: legacy_type.builtin:attribute
     object: import_discoverer.module
     attr_name:  ImportDiscoverer
