--- a/hyperapp/guesser/load_modules.resources.yaml
+++ b/hyperapp/guesser/load_modules.resources.yaml
@@ -1,7 +1,7 @@
 import:
   - legacy_service:local_types
   - legacy_service:type_module_loader
-  - legacy_type.attribute:attribute
+  - legacy_type.builtin:attribute
   - legacy_type.builtin:python_module
 
 definitions:
@@ -15,6 +15,6 @@ definitions:
       services.type_module_loader: legacy_service:type_module_loader
 
   load_additional_modules:
-    _type: legacy_type.attribute:attribute
+    _type: legacy_type.builtin:attribute
     object: load_modules.module
     attr_name: load_additional_modules
