--- a/hyperapp/guesser/object_command_ctr.resources.yaml
+++ b/hyperapp/guesser/object_command_ctr.resources.yaml
@@ -6,7 +6,7 @@ import:
 - guesser.utils:utils.module
 - legacy_service:mosaic
 - legacy_service:types
-- legacy_type.attribute:attribute
+- legacy_type.builtin:attribute
 - legacy_type.builtin:python_module
 - legacy_type.code_registry:association
 - legacy_type.command:object_commands_d
@@ -21,7 +21,7 @@ associations:
   function: construct
 definitions:
   construct:
-    _type: legacy_type.attribute:attribute
+    _type: legacy_type.builtin:attribute
     object: object_command_ctr.module
     attr_name: construct
   object_command_ctr.module:
@@ -30,7 +30,7 @@ definitions:
     file_name: object_command_ctr.dyn.py
     import_list:
       code.utils: guesser.utils:utils.module
-      htypes.attribute.attribute: legacy_type.attribute:attribute
+      htypes.builtin.attribute: legacy_type.builtin:attribute
       htypes.command.object_commands_d: legacy_type.command:object_commands_d
       htypes.impl.object_command_impl: legacy_type.impl:object_command_impl
       htypes.lcs.lcs_set_association: legacy_type.lcs:lcs_set_association
