--- a/hyperapp/guesser/service_ctr.resources.yaml
+++ b/hyperapp/guesser/service_ctr.resources.yaml
@@ -6,7 +6,7 @@ import:
 - common.mark:mark.service
 - legacy_service:mosaic
 - legacy_type.attr_constructors:service
-- legacy_type.attribute:attribute
+- legacy_type.builtin:attribute
 - legacy_type.builtin:python_module
 - legacy_type.call:call
 - legacy_type.code_registry:association
@@ -18,7 +18,7 @@ associations:
   function: construct
 definitions:
   construct:
-    _type: legacy_type.attribute:attribute
+    _type: legacy_type.builtin:attribute
     object: service_ctr.module
     attr_name: construct
   service_ctr.module:
@@ -27,7 +27,7 @@ definitions:
     file_name: service_ctr.dyn.py
     import_list:
       htypes.attr_constructors.service: legacy_type.attr_constructors:service
-      htypes.attribute.attribute: legacy_type.attribute:attribute
+      htypes.builtin.attribute: legacy_type.builtin:attribute
       htypes.call.call: legacy_type.call:call
       services.constructor_creg: resource.constructor_creg:constructor_creg.service
       services.mark: common.mark:mark.service
