--- a/hyperapp/resource/attribute.resources.yaml
+++ b/hyperapp/resource/attribute.resources.yaml
@@ -2,7 +2,7 @@ import:
 - legacy_service:python_object_creg
 - legacy_type.builtin:python_object_association
 - legacy_type.builtin:python_module
-- legacy_type.attribute:attribute
+- legacy_type.builtin:attribute
 definitions:
   attribute.module:
     _type: legacy_type.builtin:python_module
