--- a/hyperapp/resource/constructor_creg.resources.yaml
+++ b/hyperapp/resource/constructor_creg.resources.yaml
@@ -7,13 +7,13 @@ import:
 - common.mark:mark.service
 - legacy_service:types
 - legacy_service:web
-- legacy_type.attribute:attribute
+- legacy_type.builtin:attribute
 - legacy_type.builtin:python_module
 - legacy_type.call:call
 associations: []
 definitions:
   constructor_creg:
-    _type: legacy_type.attribute:attribute
+    _type: legacy_type.builtin:attribute
     object: constructor_creg.module
     attr_name: constructor_creg
   constructor_creg.module:
