--- a/hyperapp/resource/fn_to_ref.resources.yaml
+++ b/hyperapp/resource/fn_to_ref.resources.yaml
@@ -6,13 +6,13 @@ import:
 - common.mark:mark.service
 - legacy_service:mosaic
 - legacy_service:python_object_creg
-- legacy_type.attribute:attribute
+- legacy_type.builtin:attribute
 - legacy_type.builtin:python_module
 - legacy_type.call:call
 associations: []
 definitions:
   fn_to_ref:
-    _type: legacy_type.attribute:attribute
+    _type: legacy_type.builtin:attribute
     object: fn_to_ref.module
     attr_name: fn_to_ref
   fn_to_ref.module:
@@ -20,7 +20,7 @@ definitions:
     module_name: fn_to_ref
     file_name: fn_to_ref.dyn.py
     import_list:
-      htypes.attribute.attribute: legacy_type.attribute:attribute
+      htypes.builtin.attribute: legacy_type.builtin:attribute
       services.mark: common.mark:mark.service
       services.mosaic: legacy_service:mosaic
       services.python_object_creg: legacy_service:python_object_creg
