--- a/hyperapp/resource/mock_module.resources.yaml
+++ b/hyperapp/resource/mock_module.resources.yaml
@@ -1,6 +1,6 @@
 import:
 - legacy_service:python_object_creg
-- legacy_type.attribute:attribute
+- legacy_type.builtin:attribute
 - legacy_type.builtin:python_object_association
 - legacy_type.mock_module:mock_module
 - legacy_type.builtin:python_module
@@ -19,6 +19,6 @@ definitions:
     import_list:
       services.python_object_creg: legacy_service:python_object_creg
   python_object:
-    _type: legacy_type.attribute:attribute
+    _type: legacy_type.builtin:attribute
     object: mock_module.module
     attr_name: python_object
