--- a/hyperapp/resource/partial_ref.resources.yaml
+++ b/hyperapp/resource/partial_ref.resources.yaml
@@ -5,7 +5,7 @@
 import:
 - common.mark:mark.service
 - legacy_service:mosaic
-- legacy_type.attribute:attribute
+- legacy_type.builtin:attribute
 - legacy_type.builtin:python_module
 - legacy_type.call:call
 - legacy_type.partial:param
@@ -15,7 +15,7 @@ import:
 associations: []
 definitions:
   partial_ref:
-    _type: legacy_type.attribute:attribute
+    _type: legacy_type.builtin:attribute
     object: partial_ref.module
     attr_name: partial_ref
   partial_ref.module:
