--- a/hyperapp/resource/raw.resources.yaml
+++ b/hyperapp/resource/raw.resources.yaml
@@ -1,6 +1,6 @@
 import:
 - legacy_service:web
-- legacy_type.attribute:attribute
+- legacy_type.builtin:attribute
 - legacy_type.builtin:python_object_association
 - legacy_type.builtin:python_module
 - legacy_type.raw:raw
@@ -16,6 +16,6 @@ definitions:
     import_list:
       services.web: legacy_service:web
   python_object:
-    _type: legacy_type.attribute:attribute
+    _type: legacy_type.builtin:attribute
     object: raw.module
     attr_name: python_object
