--- a/hyperapp/resource/test/test_set_partial.expected.yaml
+++ b/hyperapp/resource/test/test_set_partial.expected.yaml
@@ -1,13 +1,13 @@
 import:
 - legacy_service:mosaic
 - legacy_service:web
-- legacy_type.attribute:attribute
+- legacy_type.builtin:attribute
 - legacy_type.partial:partial
 - sample_module_2:sample_module_2.module
 associations: []
 definitions:
   sample_servant_2:
-    _type: legacy_type.attribute:attribute
+    _type: legacy_type.builtin:attribute
     object: sample_module_2:sample_module_2.module
     attr_name: sample_servant_2
   sample_servant_2_partial:
