--- a/hyperapp/rpc/rpc_call.resources.yaml
+++ b/hyperapp/rpc/rpc_call.resources.yaml
@@ -6,7 +6,7 @@ import:
 - common.mark:mark.service
 - legacy_service:mosaic
 - legacy_service:types
-- legacy_type.attribute:attribute
+- legacy_type.builtin:attribute
 - legacy_type.builtin:python_module
 - legacy_type.call:call
 - legacy_type.rpc:param
@@ -26,7 +26,7 @@ definitions:
       services.transport: transport.transport:transport.service
       services.types: legacy_service:types
   rpc_call_factory:
-    _type: legacy_type.attribute:attribute
+    _type: legacy_type.builtin:attribute
     object: rpc_call.module
     attr_name: rpc_call_factory
   rpc_call_factory.service:
