--- a/hyperapp/rpc/rpc_call.tests.fixtures.resources.yaml
+++ b/hyperapp/rpc/rpc_call.tests.fixtures.resources.yaml
@@ -4,7 +4,7 @@
 
 import:
 - common.mark:mark.service
-- legacy_type.attribute:attribute
+- legacy_type.builtin:attribute
 - legacy_type.builtin:python_module
 - legacy_type.call:call
 associations: []
@@ -16,7 +16,7 @@ definitions:
     import_list:
       services.mark: common.mark:mark.service
   transport:
-    _type: legacy_type.attribute:attribute
+    _type: legacy_type.builtin:attribute
     object: rpc_call.tests.fixtures.module
     attr_name: transport
   transport.service:
