--- a/hyperapp/rpc/rpc_endpoint.tests.fixtures.resources.yaml
+++ b/hyperapp/rpc/rpc_endpoint.tests.fixtures.resources.yaml
@@ -4,13 +4,13 @@
 
 import:
 - common.mark:mark.service
-- legacy_type.attribute:attribute
+- legacy_type.builtin:attribute
 - legacy_type.builtin:python_module
 - legacy_type.call:call
 associations: []
 definitions:
   python_object_creg:
-    _type: legacy_type.attribute:attribute
+    _type: legacy_type.builtin:attribute
     object: rpc_endpoint.tests.fixtures.module
     attr_name: python_object_creg
   python_object_creg.service:
@@ -23,7 +23,7 @@ definitions:
     import_list:
       services.mark: common.mark:mark.service
   transport:
-    _type: legacy_type.attribute:attribute
+    _type: legacy_type.builtin:attribute
     object: rpc_endpoint.tests.fixtures.module
     attr_name: transport
   transport.service:
