--- a/hyperapp/sample/sample_list.fixtures.resources.yaml
+++ b/hyperapp/sample/sample_list.fixtures.resources.yaml
@@ -4,7 +4,7 @@
 
 import:
 - common.mark:mark.service
-- legacy_type.attribute:attribute
+- legacy_type.builtin:attribute
 - legacy_type.call:call
 - legacy_type.builtin:python_module
 - legacy_type.sample_list:sample_list
@@ -17,11 +17,11 @@ definitions:
     _type: legacy_type.call:call
     function: piece
   current_key:
-    _type: legacy_type.attribute:attribute
+    _type: legacy_type.builtin:attribute
     object: sample_list.fixtures.module
     attr_name: current_key
   piece:
-    _type: legacy_type.attribute:attribute
+    _type: legacy_type.builtin:attribute
     object: sample_list.fixtures.module
     attr_name: piece
   sample_list.fixtures.module:
