--- a/hyperapp/server/announce_provider.fixtures.resources.yaml
+++ b/hyperapp/server/announce_provider.fixtures.resources.yaml
@@ -6,7 +6,7 @@ import:
 - common.mark:mark.service
 - legacy_service:generate_rsa_identity
 - legacy_service:mosaic
-- legacy_type.attribute:attribute
+- legacy_type.builtin:attribute
 - legacy_type.call:call
 - legacy_type.builtin:python_module
 associations: []
@@ -32,25 +32,25 @@ definitions:
     _type: legacy_type.call:call
     function: value
   impl_registry:
-    _type: legacy_type.attribute:attribute
+    _type: legacy_type.builtin:attribute
     object: announce_provider.fixtures.module
     attr_name: impl_registry
   impl_registry.service:
     _type: legacy_type.call:call
     function: impl_registry
   ref:
-    _type: legacy_type.attribute:attribute
+    _type: legacy_type.builtin:attribute
     object: announce_provider.fixtures.module
     attr_name: ref
   server_peer_ref:
-    _type: legacy_type.attribute:attribute
+    _type: legacy_type.builtin:attribute
     object: announce_provider.fixtures.module
     attr_name: server_peer_ref
   t:
-    _type: legacy_type.attribute:attribute
+    _type: legacy_type.builtin:attribute
     object: announce_provider.fixtures.module
     attr_name: t
   value:
-    _type: legacy_type.attribute:attribute
+    _type: legacy_type.builtin:attribute
     object: announce_provider.fixtures.module
     attr_name: value
