--- a/hyperapp/server/module_list.fixtures.resources.yaml
+++ b/hyperapp/server/module_list.fixtures.resources.yaml
@@ -4,7 +4,7 @@
 
 import:
 - common.mark:mark.service
-- legacy_type.attribute:attribute
+- legacy_type.builtin:attribute
 - legacy_type.call:call
 - legacy_type.module_list:module_list
 - legacy_type.builtin:python_module
@@ -17,7 +17,7 @@ definitions:
     _type: legacy_type.call:call
     function: piece
   current_key:
-    _type: legacy_type.attribute:attribute
+    _type: legacy_type.builtin:attribute
     object: module_list.fixtures.module
     attr_name: current_key
   module_list.fixtures.module:
@@ -28,6 +28,6 @@ definitions:
       htypes.module_list.module_list: legacy_type.module_list:module_list
       services.mark: common.mark:mark.service
   piece:
-    _type: legacy_type.attribute:attribute
+    _type: legacy_type.builtin:attribute
     object: module_list.fixtures.module
     attr_name: piece
