--- a/hyperapp/server/resources_view.fixtures.resources.yaml
+++ b/hyperapp/server/resources_view.fixtures.resources.yaml
@@ -4,7 +4,7 @@
 
 import:
 - common.mark:mark.service
-- legacy_type.attribute:attribute
+- legacy_type.builtin:attribute
 - legacy_type.call:call
 - legacy_type.builtin:python_module
 - legacy_type.resources_view:association_list
@@ -32,35 +32,35 @@ definitions:
     _type: legacy_type.call:call
     function: piece_3
   current_key:
-    _type: legacy_type.attribute:attribute
+    _type: legacy_type.builtin:attribute
     object: resources_view.fixtures.module
     attr_name: current_key
   current_key_1:
-    _type: legacy_type.attribute:attribute
+    _type: legacy_type.builtin:attribute
     object: resources_view.fixtures.module
     attr_name: current_key_1
   current_key_2:
-    _type: legacy_type.attribute:attribute
+    _type: legacy_type.builtin:attribute
     object: resources_view.fixtures.module
     attr_name: current_key_2
   piece:
-    _type: legacy_type.attribute:attribute
+    _type: legacy_type.builtin:attribute
     object: resources_view.fixtures.module
     attr_name: piece
   piece_1:
-    _type: legacy_type.attribute:attribute
+    _type: legacy_type.builtin:attribute
     object: resources_view.fixtures.module
     attr_name: piece_1
   piece_2:
-    _type: legacy_type.attribute:attribute
+    _type: legacy_type.builtin:attribute
     object: resources_view.fixtures.module
     attr_name: piece_2
   piece_3:
-    _type: legacy_type.attribute:attribute
+    _type: legacy_type.builtin:attribute
     object: resources_view.fixtures.module
     attr_name: piece_3
   piece_4:
-    _type: legacy_type.attribute:attribute
+    _type: legacy_type.builtin:attribute
     object: resources_view.fixtures.module
     attr_name: piece_4
   resources_view.fixtures.module:
