--- a/hyperapp/server/server_global_commands.fixtures.resources.yaml
+++ b/hyperapp/server/server_global_commands.fixtures.resources.yaml
@@ -7,7 +7,7 @@ import:
 - legacy_service:mosaic
 - legacy_service:resource_registry
 - legacy_service:types
-- legacy_type.attribute:attribute
+- legacy_type.builtin:attribute
 - legacy_type.call:call
 - legacy_type.impl:global_command_impl
 - legacy_type.builtin:python_module
@@ -22,11 +22,11 @@ definitions:
     _type: legacy_type.call:call
     function: current_key
   current_key:
-    _type: legacy_type.attribute:attribute
+    _type: legacy_type.builtin:attribute
     object: server_global_commands.fixtures.module
     attr_name: current_key
   global_command_list:
-    _type: legacy_type.attribute:attribute
+    _type: legacy_type.builtin:attribute
     object: server_global_commands.fixtures.module
     attr_name: global_command_list
   global_command_list.service:
@@ -36,15 +36,15 @@ definitions:
     _type: legacy_type.call:call
     function: piece_2
   piece:
-    _type: legacy_type.attribute:attribute
+    _type: legacy_type.builtin:attribute
     object: server_global_commands.fixtures.module
     attr_name: piece
   piece_1:
-    _type: legacy_type.attribute:attribute
+    _type: legacy_type.builtin:attribute
     object: server_global_commands.fixtures.module
     attr_name: piece_1
   piece_2:
-    _type: legacy_type.attribute:attribute
+    _type: legacy_type.builtin:attribute
     object: server_global_commands.fixtures.module
     attr_name: piece_2
   server_global_commands.fixtures.module:
@@ -52,7 +52,7 @@ definitions:
     module_name: server_global_commands.fixtures
     file_name: server_global_commands.fixtures.dyn.py
     import_list:
-      htypes.attribute.attribute: legacy_type.attribute:attribute
+      htypes.builtin.attribute: legacy_type.builtin:attribute
       htypes.impl.global_command_impl: legacy_type.impl:global_command_impl
       htypes.server_global_commands.server_global_commands: legacy_type.server_global_commands:server_global_commands
       htypes.server_global_commands_fixtures.sample_global_command_d: legacy_type.server_global_commands_fixtures:sample_global_command_d
