--- a/hyperapp/server/server_global_commands.resources.yaml
+++ b/hyperapp/server/server_global_commands.resources.yaml
@@ -7,7 +7,7 @@ import:
 - legacy_service:python_object_creg
 - legacy_service:types
 - legacy_service:web
-- legacy_type.attribute:attribute
+- legacy_type.builtin:attribute
 - legacy_type.builtin:string
 - legacy_type.command:object_commands_d
 - legacy_type.impl:global_command_impl
@@ -36,7 +36,7 @@ associations:
   value: ServerGlobalCommands.run.command
 definitions:
   ServerGlobalCommands:
-    _type: legacy_type.attribute:attribute
+    _type: legacy_type.builtin:attribute
     object: server_global_commands.module
     attr_name: ServerGlobalCommands
   ServerGlobalCommands.run.command:
