--- a/hyperapp/stash/local_server.resources.yaml
+++ b/hyperapp/stash/local_server.resources.yaml
@@ -5,7 +5,7 @@
 import:
 - common.mark:mark.service
 - legacy_service:file_bundle
-- legacy_type.attribute:attribute
+- legacy_type.builtin:attribute
 - legacy_type.call:call
 - legacy_type.builtin:python_module
 associations: []
@@ -18,7 +18,7 @@ definitions:
       services.file_bundle: legacy_service:file_bundle
       services.mark: common.mark:mark.service
   local_server_ref:
-    _type: legacy_type.attribute:attribute
+    _type: legacy_type.builtin:attribute
     object: local_server.module
     attr_name: local_server_ref
   local_server_ref.service:
