--- a/hyperapp/subprocess/subprocess.resources.yaml
+++ b/hyperapp/subprocess/subprocess.resources.yaml
@@ -6,7 +6,7 @@ import:
 - common.bundler:bundler.service
 - common.mark:mark.service
 - legacy_service:mosaic
-- legacy_type.attribute:attribute
+- legacy_type.builtin:attribute
 - legacy_type.builtin:python_module
 - legacy_type.call:call
 associations: []
@@ -20,7 +20,7 @@ definitions:
       services.mark: common.mark:mark.service
       services.mosaic: legacy_service:mosaic
   subprocess_running:
-    _type: legacy_type.attribute:attribute
+    _type: legacy_type.builtin:attribute
     object: subprocess.module
     attr_name: subprocess_running
   subprocess_running.service:
