--- a/hyperapp/subprocess/subprocess_transport.resources.yaml
+++ b/hyperapp/subprocess/subprocess_transport.resources.yaml
@@ -10,7 +10,7 @@ import:
 - legacy_service:on_stop
 - legacy_service:stop_signal
 - legacy_service:unbundler
-- legacy_type.attribute:attribute
+- legacy_type.builtin:attribute
 - legacy_type.builtin:python_module
 - legacy_type.call:call
 - transport.identity:parcel_registry.service
@@ -19,7 +19,7 @@ import:
 associations: []
 definitions:
   add_subprocess_server_connection:
-    _type: legacy_type.attribute:attribute
+    _type: legacy_type.builtin:attribute
     object: subprocess_transport.module
     attr_name: add_subprocess_server_connection
   add_subprocess_server_connection.service:
