--- a/hyperapp/transport/identity.resources.yaml
+++ b/hyperapp/transport/identity.resources.yaml
@@ -7,7 +7,7 @@ import:
 - common.mark:mark.service
 - legacy_service:types
 - legacy_service:web
-- legacy_type.attribute:attribute
+- legacy_type.builtin:attribute
 - legacy_type.builtin:python_module
 - legacy_type.call:call
 associations: []
@@ -22,28 +22,28 @@ definitions:
       services.types: legacy_service:types
       services.web: legacy_service:web
   identity_registry:
-    _type: legacy_type.attribute:attribute
+    _type: legacy_type.builtin:attribute
     object: identity.module
     attr_name: identity_registry
   identity_registry.service:
     _type: legacy_type.call:call
     function: identity_registry
   parcel_registry:
-    _type: legacy_type.attribute:attribute
+    _type: legacy_type.builtin:attribute
     object: identity.module
     attr_name: parcel_registry
   parcel_registry.service:
     _type: legacy_type.call:call
     function: parcel_registry
   peer_registry:
-    _type: legacy_type.attribute:attribute
+    _type: legacy_type.builtin:attribute
     object: identity.module
     attr_name: peer_registry
   peer_registry.service:
     _type: legacy_type.call:call
     function: peer_registry
   signature_registry:
-    _type: legacy_type.attribute:attribute
+    _type: legacy_type.builtin:attribute
     object: identity.module
     attr_name: signature_registry
   signature_registry.service:
