--- a/hyperapp/transport/route_registry.resources.yaml
+++ b/hyperapp/transport/route_registry.resources.yaml
@@ -7,13 +7,13 @@ import:
 - common.mark:mark.service
 - legacy_service:types
 - legacy_service:web
-- legacy_type.attribute:attribute
+- legacy_type.builtin:attribute
 - legacy_type.builtin:python_module
 - legacy_type.call:call
 associations: []
 definitions:
   route_registry:
-    _type: legacy_type.attribute:attribute
+    _type: legacy_type.builtin:attribute
     object: route_registry.module
     attr_name: route_registry
   route_registry.module:
