--- a/hyperapp/transport/rsa_identity.resources.yaml
+++ b/hyperapp/transport/rsa_identity.resources.yaml
@@ -5,7 +5,7 @@
 import:
 - common.mark:mark.service
 - legacy_service:mosaic
-- legacy_type.attribute:attribute
+- legacy_type.builtin:attribute
 - legacy_type.builtin:python_module
 - legacy_type.call:call
 - legacy_type.code_registry:association
@@ -36,7 +36,7 @@ associations:
   function: rsa_signature_from_piece
 definitions:
   generate_rsa_identity:
-    _type: legacy_type.attribute:attribute
+    _type: legacy_type.builtin:attribute
     object: rsa_identity.module
     attr_name: generate_rsa_identity
   generate_rsa_identity.service:
@@ -58,18 +58,18 @@ definitions:
       services.peer_registry: transport.identity:peer_registry.service
       services.signature_registry: transport.identity:signature_registry.service
   rsa_identity_from_piece:
-    _type: legacy_type.attribute:attribute
+    _type: legacy_type.builtin:attribute
     object: rsa_identity.module
     attr_name: rsa_identity_from_piece
   rsa_parcel_from_piece:
-    _type: legacy_type.attribute:attribute
+    _type: legacy_type.builtin:attribute
     object: rsa_identity.module
     attr_name: rsa_parcel_from_piece
   rsa_peer_from_piece:
-    _type: legacy_type.attribute:attribute
+    _type: legacy_type.builtin:attribute
     object: rsa_identity.module
     attr_name: rsa_peer_from_piece
   rsa_signature_from_piece:
-    _type: legacy_type.attribute:attribute
+    _type: legacy_type.builtin:attribute
     object: rsa_identity.module
     attr_name: rsa_signature_from_piece
