--- a/hyperapp/transport/sync_route_table.resources.yaml
+++ b/hyperapp/transport/sync_route_table.resources.yaml
@@ -7,7 +7,7 @@ import:
 - common.mark:mark.service
 - legacy_service:aux_unbundler_hooks
 - legacy_service:mosaic
-- legacy_type.attribute:attribute
+- legacy_type.builtin:attribute
 - legacy_type.builtin:python_module
 - legacy_type.call:call
 - transport.identity:peer_registry.service
@@ -16,7 +16,7 @@ import:
 associations: []
 definitions:
   route_table:
-    _type: legacy_type.attribute:attribute
+    _type: legacy_type.builtin:attribute
     object: sync_route_table.module
     attr_name: route_table
   route_table.service:
