--- a/hyperapp/transport/tcp_transport.resources.yaml
+++ b/hyperapp/transport/tcp_transport.resources.yaml
@@ -10,7 +10,7 @@ import:
 - legacy_service:on_stop
 - legacy_service:stop_signal
 - legacy_service:unbundler
-- legacy_type.attribute:attribute
+- legacy_type.builtin:attribute
 - legacy_type.builtin:python_module
 - legacy_type.call:call
 - legacy_type.code_registry:association
@@ -27,11 +27,11 @@ associations:
   function: route_from_piece
 definitions:
   route_from_piece:
-    _type: legacy_type.attribute:attribute
+    _type: legacy_type.builtin:attribute
     object: tcp_transport.module
     attr_name: route_from_piece
   tcp_server_factory:
-    _type: legacy_type.attribute:attribute
+    _type: legacy_type.builtin:attribute
     object: tcp_transport.module
     attr_name: tcp_server_factory
   tcp_server_factory.service:
