--- a/hyperapp/transport/transport.resources.yaml
+++ b/hyperapp/transport/transport.resources.yaml
@@ -6,7 +6,7 @@ import:
 - common.bundler:bundler.service
 - common.mark:mark.service
 - legacy_service:mosaic
-- legacy_type.attribute:attribute
+- legacy_type.builtin:attribute
 - legacy_type.builtin:python_module
 - legacy_type.call:call
 - transport.route_registry:route_registry.service
@@ -14,7 +14,7 @@ import:
 associations: []
 definitions:
   transport:
-    _type: legacy_type.attribute:attribute
+    _type: legacy_type.builtin:attribute
     object: transport.module
     attr_name: transport
   transport.module:
